# proteca

./: PROTECA (Regressions).ipynb  PROTECA (tutorial).ipynb  PROTECA_(NLP).ipynb  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: PROTECA (CV)-checkpoint.ipynb  PROTECA (tutorial)-checkpoint.ipynb
notebooks/: PROTECA (CV).ipynb  PROTECA (Regressions).ipynb  PROTECA_(NLP).ipynb
notebooks/.ipynb_checkpoints/: PROTECA (CV)-checkpoint.ipynb  PROTECA (Regressions)-checkpoint.ipynb  PROTECA_(NLP)-checkpoint.ipynb
src/PROTECA.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/proteca/: attacks.py  defences.py  synset_words.txt
