[project]
name = "PROTECA"
version = "0.1.3"
authors = [
  { name="Menisov Artem", email="men.arty@yamdex.ru" },
]
description = "Library for guaranteed backdoor neutralization of machine learning models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SadrikA78/proteca"
"Bug Tracker" = "https://github.com/SadrikA78/proteca/issues"